# v4ar

./: .gitignore  BUILD_FIXES.md  COMPLETE_GUIDE.md  PACKAGE_RESTRUCTURING.md  QUICK_REFERENCE.md  README.md  README_A2.md  README_A3.md  RUNNING_NODES.md  custom_startup.sh  custom_startup13.sh  explore_oak.py  explore_oak_depth.py  explore_oak_rect.py  explore_oak_simple.py  frames_2025-11-28_19.26.25.gv  frames_2025-11-28_19.28.32.gv  led.py  nohup.out  subscribe_recording.avi  tesing.ipynb  test.avi  test_apriltag.sh
ROS_BAGS/rtabmap_bag_edit/: metadata.yaml
data/line_follower_cleaned/: metadata.yaml
explore/: explore_oak.py  explore_oak_depth.py
opencv_tools/: package.xml  setup.py
opencv_tools/opencv_tools/: basic_image_subscriber.py  basic_image_subscriber_detector.py  basic_image_subscriber_notcanny.py
ros_cmds/: apriltag.sh  cam.sh  line_follow_startup.sh  line_following.sh  line_following_confidence.sh  localization_kalman.sh  localization_kalman_no_img_sub.sh  localization_oak.sh  marker_detector.sh  oak_cam.sh  start_cam.sh  stop_cam.sh  stop_wheels.sh  triangulation_localization.sh
rosbag2_2025_12_04-15_01_53/: metadata.yaml
src/control/: CMakeLists.txt  README.md  __init__.py  package.xml  setup.py
src/image_tools/: package.xml  setup.py
src/line_detection/: package.xml  setup.py
src/line_detector/: package.xml  setup.py
src/perception_msgs/: CMakeLists.txt  package.xml
src/perception_msgs/msg/: MarkerPose.msg  ObjectPose.msg  ObjectPoseArray.msg
src/ugv_launch/: package.xml  setup.py
src/ugv_launch/launch/: vision_startup.launch.py
(+140 files in other folders)
