<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ugv_launch</name>
  <version>0.0.0</version>
  <description>Launch files and configurations for UGV vision system</description>
  <maintainer email="quintenengelen@gmail.com">root</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>visualizations</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
